Bump selenide-version from 7.10.1 to 7.11.0 (#1154)
Bumps `selenide-version` from 7.10.1 to 7.11.0.
Updates `com.codeborne:selenide` from 7.10.1 to 7.11.0
<details>
<summary>Release notes</summary>
<p><em>Sourced from <a
href="https://github.com/selenide/selenide/releases">com.codeborne:selenide's
releases</a>.</em></p>
<blockquote>
<h2>v7.11.0</h2>
<h2>What's Changed</h2>
<ul>
<li>update Selenium from 4.35.0 to 4.36.0 (CDP v139 -&gt; v140) by <a
href="https://github.com/asolntsev"><code>@​asolntsev</code></a> in <a
href="https://redirect.github.com/selenide/selenide/pull/3133">selenide/selenide#3133</a></li>
<li><a
href="https://redirect.github.com/selenide/selenide/issues/3107">#3107</a>
removed &quot;unwrapping&quot; of webdriver (using Augmenter) by <a
href="https://github.com/asolntsev"><code>@​asolntsev</code></a> in <a
href="https://redirect.github.com/selenide/selenide/pull/3114">selenide/selenide#3114</a></li>
<li><a
href="https://redirect.github.com/selenide/selenide/issues/2850">#2850</a>
disable smooth scrolling by default by <a
href="https://github.com/asolntsev"><code>@​asolntsev</code></a> in <a
href="https://redirect.github.com/selenide/selenide/pull/3119">selenide/selenide#3119</a></li>
<li>remove workaround with HostIdentifier by <a
href="https://github.com/asolntsev"><code>@​asolntsev</code></a> in <a
href="https://redirect.github.com/selenide/selenide/pull/3113">selenide/selenide#3113</a></li>
<li>Allow to pass custom <code>ScreenShotLaboratory</code> to
<code>SelenideDriver</code> by <a
href="https://github.com/mkurz"><code>@​mkurz</code></a> in <a
href="https://redirect.github.com/selenide/selenide/pull/3134">selenide/selenide#3134</a>,
<a
href="https://redirect.github.com/selenide/selenide/pull/3131">selenide/selenide#3131</a>,
<a
href="https://redirect.github.com/selenide/selenide/pull/3128">selenide/selenide#3128</a>,
<a
href="https://redirect.github.com/selenide/selenide/pull/3130">selenide/selenide#3130</a>
and <a
href="https://redirect.gi